maintenance: do not set fixed width on mobile <html> element, to avoid the CM's left side bar to flow over the site completely

--- a/site/src/main/webapp/css/mobile/screen.css
+++ b/site/src/main/webapp/css/mobile/screen.css
@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2013 Hippo B.V. (http://www.onehippo.com)
+ * Copyright 2010-2017 Hippo B.V. (http://www.onehippo.com)
  */
 
 /* General */
@@ -10,7 +10,7 @@ a:hover { text-decoration: underline; }
 /* Document */
 .yui-d-custom, #doc { width: 100%; min-width: 320px; margin: auto; }
 html { background-color: #cccccc; -webkit-text-size-adjust:none; }
-html, body, #hd, #bd, #ft { width: 320px; }
+body, #hd, #bd, #ft { width: 320px; }
 
 
 /* Header */
